# tarlive

./: Cargo.toml  README  README.md  test.sh
.github/workflows/: build.yml  main.yml
src/: deterministic_zip.rs  file_entry.rs  file_list.rs  main.rs  output_writer.rs  tar_output.rs
test_data/: lorem_ipsum.txt  random.binary  random_base64.txt  test.files
