[package]
name = "tarlive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
sha2="*"
base64="*"
tar="*"
serde_json="*"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "*"
clap = { version = "4", features = ["derive"] }
zip = { version = "0.6", features = [ "deflate", "bzip2" ] }
